first try successful rahe nodemailer successfully use

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL_USER=musama4288921@gmail.com
-EMAIL_PASS=Taekwondoboy321
+EMAIL_PASS=qlce qval keml ivyl
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
