--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^12.5.0",
     "next": "^14.2.24",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
