--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "framer-motion": "^12.5.0",
     "next": "^14.2.24",
