--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EMAIL_USER=musama4288921@gmail.com
 EMAIL_PASS=qlce qval keml ivyl
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
+MOBILE_NUMBER_ADMIN= +923164288921
